package it.brokenengineers.dnd_character_manager.viewModel

object TestTags {

    // Home screen
    const val WELCOME_MESSAGE = "welcome_message"
    const val TEST_CARD = "test_card"
    const val CREATE_CHARACTER_BUTTON = "create_character_button"


    // Character sheet
    const val CHARACTER_NAME_TEXT = "character_name"
    const val CHARACTER_LEVEL_TEXT = "character_level"
    const val CHARACTER_RACE_TEXT = "character_race"
    const val CHARACTER_CLASS_TEXT = "character_class"

    const val TEMP_HP_TEXT = "temp_hp_text"
    const val HP_TEXT = "hp_text"

    const val EDIT_HP_BUTTON = "edit_hp_button"
    const val DIALOG_HP_FIELD = "dialog_hp_field"
    const val DIALOG_ADD_HP_BUTTON = "dialog_add_hp_button"
    const val DIALOG_LOSE_HP_BUTTON = "dialog_lose_hp_button"

    const val EDIT_TEMP_HP_BUTTON = "edit_temp_hp_button"
    const val DIALOG_TEMP_HP_FIELD = "dialog_temp_hp_field"
    const val DIALOG_ADD_TEMP_HP_BUTTON = "dialog_add_temp_hp_button"
    const val DIALOG_LOSE_TEMP_HP_BUTTON = "dialog_lose_temp_hp_button"

    const val HIT_BUTTON = "hit_button"
    const val DIALOG_HIT_FIELD = "dialog_hit_field"
    const val DIALOG_ADD_HIT_BUTTON = "dialog_add_hit_button"

    const val LEVELUP_BUTTON = "levelup_button"
    const val REST_BUTTON = "rest_button"

    // Inventory
    const val TOTAL_WEIGHT_TEXT = "total_weight_text"

    const val ITEM_NAME_TEXT = "item_name_text"
    const val ITEM_QUANTITY_TEXT = "item_quantity_text"
    const val ITEM_WEIGHT_TEXT = "item_weight_text"
    const val ITEM_DELETE_BUTTON = "item_delete_button"
    const val ITEM_INCREMENT_BUTTON = "item_increment_button"
    const val ITEM_DECREMENT_BUTTON = "item_decrement_button"

    const val ADD_ITEM_BUTTON = "add_item_button"
    const val DIALOG_ADD_ITEM_TITLE = "dialog_add_item_title"
    const val DIALOG_ITEM_NAME_FIELD = "dialog_item_name_field"
    const val DIALOG_ITEM_QUANTITY_FIELD = "dialog_item_quantity_field"
    const val DIALOG_ITEM_WEIGHT_FIELD = "dialog_item_weight_field"
    const val DIALOG_ADD_ITEM_BUTTON = "dialog_add_item_button"

    // Attack
    const val SPELLS_TITLE_TEXT = "spells_title_text"
    const val N_SLOT_TEXT = "n_slot_text"
    const val USE_SLOT_BUTTON = "use_slot_button"

    // Build character
    const val BUILD_CHARACTER_TITLE = "build_character_title"

    // Level up
    const val LEVELUP_COLUMN = "levelup_column"
    const val STAT_INCREASE_NAME = "stat_increase_name"
    const val STAT_INCREASE_OLD_VAL = "_increase_old_val"
    const val STAT_INCREASE_NEW_VAL = "_increase_new_val"
    const val CHOOSE_SPELL = "choose_spell"
    const val CONFIRM_SPELLS = "confirm_spells"
    const val SPELLS_CHOSEN = "spells_chosen"
    const val CHOOSE_ARCANE_TRADITION = "choose_arcane_tradition"
    const val ARCANE_TRADITION_CHOSEN = "arcane_tradition_chosen"
    const val CONFIRM_ARCANE_TRADITION = "confirm_arcane_tradition"
    const val CONFIRM_LEVELUP = "confirm_levelup"
    const val ADD_SPELLS_CONFIRM_BUTTON = "add_spells_confirm_button"

    // Rest
    const val SHORT_REST_BUTTON = "short_rest_button"
    const val CONFIRM_REST_BUTTON = "confirm_rest_button"
    const val LONG_REST_BUTTON = "long_rest_button"
    const val PREPARED_SPELL_RADIO_BUTTON = "prepared_spell_radio_button"



}