...
                modifier = Modifier.testTag(TestTags.BUILD_CHARACTER_TITLE)
            )
            Spacer(modifier = Modifier.padding(SmallPadding))
            Text(text = stringResource(R.string.name), style = MaterialTheme.typography.bodyLarge)
            // text field for character name
            OutlinedTextField(
                modifier = Modifier.testTag("character_name_field"),
                value = characterName,
                onValueChange = { characterName = it },
                label = { Text(stringResource(R.string.character_name)) },
                textStyle = MaterialTheme.typography.bodyLarge.copy(
                    color = MaterialTheme.colorScheme.onBackground
                ),
...
