...
    val editHpButtonString = stringResource(id = R.string.edit_hp_button)
    val editTempHpButtonString = stringResource(id = R.string.edit_temp_hp_button)

    val showDialogHp = remember { mutableStateOf(false) }
    val showDialogTempHp = remember { mutableStateOf(false) }
    val showDialogHit = remember { mutableStateOf(false) }
    val hp = remember { mutableStateOf("") }
    val tempHp = remember { mutableStateOf("") }
    val hitValue = remember { mutableStateOf("") }

    Row (
        horizontalArrangement = Arrangement.Center,
        verticalAlignment = Alignment.CenterVertically,
...
}

sealed class BottomNavItem(val route: String, val label: String) {
    data object Home : BottomNavItem("home", "Home")
    data object Sheet : BottomNavItem("sheet", "Sheet")
    data object Inventory : BottomNavItem("inventory", "Inventory")
    data object Attack : BottomNavItem("attack", "Attack & Spells")
    companion object {
        val items = listOf(Home, Sheet, Inventory, Attack)
    }
}


...
